--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,5 @@
     "python.testing.unittestEnabled": false,
     "python.testing.nosetestsEnabled": false,
     "python.testing.pytestEnabled": false,
-    "python.testing.promptToConfigure": false,
-    "python.pythonPath": "/opt/python/latest/bin/python"
+    "python.testing.promptToConfigure": false
 }
