--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,17 @@
 sudo: required
 dist: focal # Ubuntu 20.04
 services: docker # Enables docker
+
 script:
 - cd paper
 - wget https://raw.githubusercontent.com/blang/latex-docker/master/latexdockercmd.sh
 - chmod +x latexdockercmd.sh
 - ./latexdockercmd.sh latexmk -pdf -outdir=./_build
+
+deploy:
+  provider: releases
+  api_key: "${{ secrets.SuperSecret }}"
+  file: "_build/main.pdf"
+  skip_cleanup: true
+  on:
+    tags: true
