--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 sudo: required
-dist: focal # Ubuntu 20.04
+dist: 
+- focal # Ubuntu 20.04
+- bionic # Ubuntu 18.04
 language: generic
 services: docker # Enables docker
 
