--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,6 @@
     "python.testing.pytestEnabled": false,
     "python.testing.promptToConfigure": false,
     "editor.columnSelection": true,
-    "codespaces.accountProvider": "GitHub"
+    "codespaces.accountProvider": "GitHub",
+    "python.linting.pylintEnabled": true
 }
