--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,4 @@
+dist: focal
 language: python
 python:
   - "3.6"      # current default Python on Travis CI
@@ -6,6 +7,9 @@ python:
   - "3.9"
   - "3.9-dev"  # 3.9 development branch
   - "nightly"  # nightly build
+  - "pypy"   # currently Python 2.7.13, PyPy 7.1.1
+  - "pypy3"  # currently Python 3.6.1,  PyPy 7.1.1-beta0
   
 install:
-  - pip install --upgrade SuperconGAN
+  - python3 -m pip install --upgrade pip
+  - python3 -m pip install --upgrade SuperconGAN
