--- a/.travis.yml
+++ b/.travis.yml
@@ -14,3 +14,4 @@ before_install:
   - python -m pip install --upgrade pip
 install:
   - python3 -m pip install --upgrade SuperconGAN --use-feature=2020-resolver
+  - python3 -m pip install --upgrade pytest
