--- a/.travis.yml
+++ b/.travis.yml
@@ -15,3 +15,4 @@ before_install:
 install:
   - python3 -m pip install --upgrade SuperconGAN --use-feature=2020-resolver
   - python3 -m pip install --upgrade pytest
+  - pytest --version
