--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ before_install:
   - python -m pip install --upgrade pip
 
 install:
-  - python3 -m pip install --upgrade SuperconGAN --use-feature=2020-resolver
+  - python3 -m pip install --upgrade SuperconGAN
   - python3 -m pip install --upgrade pytest
   - python3 -m pytest --version
 
