--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ python:
   
 before_install:
   - python -m pip install --upgrade pip
+  - python3 -m pip install ctgan
 
 install:
   - python3 -m pip install --upgrade SuperconGAN
