--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ python:
   - "3.9-dev"  # 3.9 development branch
   - "nightly"  # nightly build
   - "pypy3"  # currently Python 3.6.1,  PyPy 7.1.1-beta0
+  - "pypy3.6-7.3.1" #Python 3.6, PyPy 7.3.1
   
 before_install:
   - python -m pip install --upgrade pip
